# HelloQML

./: CMakeLists.txt  Main.qml  cppbackend.cpp  cppbackend.h  main.cpp
